added more text

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <h3>
+    <h1>
         Run Buddy🏃
-    </h3>
-    What We Do
+        What We Do 
+        Your Trainers
+        Reach Out 
+    </h1>
     </body>
 </html>
