saving initial changes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <h1>
-        Run Buddy🏃
-        What We Do 
-        Your Trainers
-        Reach Out 
-    </h1>
+        <!--navigation-->
+    <header>
+        <h1>Run Buddy🏃</h1>
+    </header>
+    <br>
+    <!--hero jumbotron-->
+<section>
+
+</section>
+<!--"what we do box"-->
+<section>
+    <h2>What We Do</h2>
+</section>
+<!--Your Trainers Box-->
+<section>
+    <h2>Your Trainers</h2>
+</section>
+<!--Reach out box-->
+<section>
+    <h2>Reach Out</h2>
+</section>
     </body>
 </html>
