--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
 <section>
     <h2>Reach Out</h2>
 </section>
+<footer>
+    <h2>❤️ Made With Love by Run Buddy</h2>
+</footer>
     </body>
 </html>
