--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
           Let us know and we'll be happy to talk to you!
         </p>
         <address>
-          55 Main Street <br />
-          Some Town, Ca <br />
-          12345<br />
+          20161 West 5000 South<br />
+          Duchesne, Utah<br />
+          84021<br />
           P: 555.RUN.BUDZ (555.786.2839)<br />
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
