--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
-        frameborder="0" style="border:0" allowfullscreen>
+        src="https://www.google.com/maps/place/20161+5000+S,+Duchesne,+UT+84021/@40.2256738,-110.3756641,17z/data=!4m13!1m7!3m6!1s0x874e528b44f1f507:0xf68b12c140e71121!2s20161+5000+S,+Duchesne,+UT+84021!3b1!8m2!3d40.2256697!4d-110.3734754!3m4!1s0x874e528b44f1f507:0xf68b12c140e71121!8m2!3d40.2256697!4d-110.3734754"
+        frameborder="4px" style="border:4px" allowfullscreen>
       </iframe>
       <div>
         <h3>Run Buddy</h3>
