--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
     <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
-      <img src="step-1.svg" alt="" />
+        <img src="./assets/images/step-1.svg" alt="">
+        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+        <p>You're already here, so why not?</p>
+      </div>" alt="" />
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
@@ -160,7 +163,7 @@
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe
-        src="https://www.google.com/maps/place/20161+5000+S,+Duchesne,+UT+84021/@40.2256738,-110.3756641,17z/data=!4m13!1m7!3m6!1s0x874e528b44f1f507:0xf68b12c140e71121!2s20161+5000+S,+Duchesne,+UT+84021!3b1!8m2!3d40.2256697!4d-110.3734754!3m4!1s0x874e528b44f1f507:0xf68b12c140e71121!8m2!3d40.2256697!4d-110.3734754"
+        src="https://goo.gl/maps/XzoDYFZWx6j94Ft67"
         frameborder="4px" style="border:4px" allowfullscreen>
       </iframe>
       <div>
