--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="contact-info">
       <iframe
         src="https://goo.gl/maps/XzoDYFZWx6j94Ft67"
-        frameborder="4px" style="border:4px" allowfullscreen>
+        frameborder="4px" style="border-color: blueviolet;" allowfullscreen>
       </iframe>
       <div>
         <h3>Run Buddy</h3>
