--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="hero">
     <div class="hero-form">
       <div>
-        <img src="hero-bg.jpg" alt="" />
+        <img src="hero-bg.jpg" alt="">
       <h3>Get Started Today</h3>
          <p>Fill out this form and one of our trainers will schedule a consult</p>
       <form>
