--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
-  <link rel="stylesheet" href="style.css" >
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- navigation of page -->
@@ -35,16 +35,15 @@
   </header>
   <!-- hero/jumbotron -->
   <section class="hero">
+    <img src="hero-bg.jpg" alt="background"/>
     <div class="hero-form">
-      <div>
-        <img src="hero-bg.jpg" alt="background"/>
       <h3>Get Started Today</h3>
          <p>Fill out this form and one of our trainers will schedule a consult</p>
       <form>
         <label for="name">Enter full name:</label>
-        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
         <label for="email">Enter email address:</label>
-        <input type="text" placeholder="Email Address" name="email" id="email" class="form-input">
+        <input type="text" placeholder="Email Address" name="email" id="email" class="form-input"/>
         <label for="phone">Enter a telephone number:</label>
         <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
         <p>
@@ -85,10 +84,10 @@
     <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
-        <img src="./assets/images/step-1.svg" alt="">
+        <img src="step-1.svg" alt="icon of computer, fill out form">
         <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
         <p>You're already here, so why not?</p>
-      </div>" alt="" />
+      </div>
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
@@ -163,8 +162,8 @@
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe
-        src="https://goo.gl/maps/XzoDYFZWx6j94Ft67"
-        frameborder="4px" style="border-color: blueviolet;" allowfullscreen>
+        embed src="https://goo.gl/maps/XzoDYFZWx6j94Ft6"
+        frameborder="4px" allowfullscreen>
       </iframe>
       <div>
         <h3>Run Buddy</h3>
@@ -174,10 +173,10 @@
           Let us know and we'll be happy to talk to you!
         </p>
         <address>
-          20161 West 5000 South<br />
-          Duchesne, Utah<br />
-          84021<br />
-          P: 555.RUN.BUDZ (555.786.2839)<br />
+          20161 West 5000 South<br/>
+          Duchesne, Utah<br/>
+          84021<br/>
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
       </div>
@@ -195,3 +194,6 @@
 </body>
 
 </html>
+
+<div>
+ 
